--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 dist/
 test/regression/programs/imaginary/PingPong
 test/regression/programs/imaginary/SendReceive
+test/regression/programs/imaginary/Greetings
