--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ test/regression/programs/imaginary/SendReceive
 test/regression/programs/imaginary/Greetings
 test/regression/programs/imaginary/SendReceiveBlock
 test/regression/programs/imaginary/SendReceiveFuture
+test/regression/programs/imaginary/Bcast
