Test case for greetings with non blocking recv.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ test/regression/programs/imaginary/Greetings
 test/regression/programs/imaginary/SendReceiveBlock
 test/regression/programs/imaginary/SendReceiveFuture
 test/regression/programs/imaginary/Bcast
+test/regression/programs/imaginary/GreetingsAsync
