--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -1,18 +1,18 @@
-name:                bindings-mpi 
+name:                bindings-mpi
 version:             0.0.1
 cabal-version:       >= 1.6
-synopsis:            Haskell bindings to the MPI library. 
+synopsis:            Haskell bindings to the MPI library.
 description:         Haskell bindings to the MPI library.
-category:            FFI, Distributed Computing 
+category:            FFI, Distributed Computing
 license:             BSD3
 license-file:        LICENSE
 copyright:           (c) 2010 Bernard James Pope
 author:              Bernard James Pope (Bernie Pope)
-maintainer:          florbitous@gmail.com 
-homepage:            http://wiki.github.com/bjpop/berp/  
+maintainer:          florbitous@gmail.com
+homepage:            http://wiki.github.com/bjpop/bindings-mpi/
 build-type:          Simple
 stability:           experimental
-tested-with:         GHC==6.10.4 
+tested-with:         GHC==6.10.4
 extra-source-files:  src/cbits, src/include
 
 Library
@@ -20,10 +20,10 @@ Library
    build-tools:      c2hs
    ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
    c-sources:
-      src/cbits/init_wrapper.c, 
+      src/cbits/init_wrapper.c,
       src/cbits/constants.c
    include-dirs:
-      src/include 
+      src/include
    hs-source-dirs:
       src
    build-depends:
@@ -34,7 +34,6 @@ Library
       extensible-exceptions,
       array
    exposed-modules:
-      Control.Parallel.MPI,
       Control.Parallel.MPI.Internal,
       Control.Parallel.MPI.Datatype,
       Control.Parallel.MPI.Comm,
@@ -43,7 +42,8 @@ Library
       Control.Parallel.MPI.Request,
       Control.Parallel.MPI.Tag,
       Control.Parallel.MPI.Rank,
-      Control.Parallel.MPI.Storable
+      Control.Parallel.MPI.StorableArray,
+      Control.Parallel.MPI.Serializable
    other-modules:
       C2HS,
       Control.Parallel.MPI.MarshalUtils,
