--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -41,6 +41,7 @@ Library
       Control.Parallel.MPI.Internal,
       Control.Parallel.MPI.Datatype,
       Control.Parallel.MPI.Comm,
+      Control.Parallel.MPI.Common,
       Control.Parallel.MPI.Status,
       Control.Parallel.MPI.ErrorClasses,
       Control.Parallel.MPI.Request,
@@ -69,6 +70,7 @@ executable  bindings-mpi-testsuite
     Control.Parallel.MPI.Internal,
     Control.Parallel.MPI.Datatype,
     Control.Parallel.MPI.Comm,
+    Control.Parallel.MPI.Common,
     Control.Parallel.MPI.Status,
     Control.Parallel.MPI.ErrorClasses,
     Control.Parallel.MPI.Request,
