Added support for MPI_Init_thread and different thread support levels

--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -43,6 +43,7 @@ Library
       Control.Parallel.MPI.Comm,
       Control.Parallel.MPI.Status,
       Control.Parallel.MPI.ErrorClasses,
+      Control.Parallel.MPI.ThreadSupport,
       Control.Parallel.MPI.Request,
       Control.Parallel.MPI.Tag,
       Control.Parallel.MPI.Rank,
@@ -71,6 +72,7 @@ executable  bindings-mpi-testsuite
     Control.Parallel.MPI.Comm,
     Control.Parallel.MPI.Status,
     Control.Parallel.MPI.ErrorClasses,
+    Control.Parallel.MPI.ThreadSupport,
     Control.Parallel.MPI.Request,
     Control.Parallel.MPI.Tag,
     Control.Parallel.MPI.Rank,
