--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -85,7 +85,7 @@ executable  bindings-mpi-testsuite
     Control.Parallel.MPI.Utils
   main-is:       Testsuite.hs
   if flag(test)
-    ghc-options: -fhpc
+    -- ghc-options: -fhpc - profiling does not work well with MPI
     build-depends: base >=3 && <=5, HUnit, test-framework, test-framework-hunit
   else
     buildable: False
