Testsuite changes: Test.Runner is in, TestFramework is out Plus, Serializable test are separated in preparation for StorableArray tests

--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -86,6 +86,6 @@ executable  bindings-mpi-testsuite
   main-is:       Testsuite.hs
   if flag(test)
     -- ghc-options: -fhpc - profiling does not work well with MPI
-    build-depends: base >=3 && <=5, HUnit, test-framework, test-framework-hunit
+    build-depends: base >=3 && <=5, HUnit, testrunner
   else
     buildable: False
