--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -48,7 +48,7 @@ Library
       Control.Parallel.MPI.Request,
       Control.Parallel.MPI.Tag,
       Control.Parallel.MPI.Rank,
-      Control.Parallel.MPI.Array,
+      Control.Parallel.MPI.Storable,
       Control.Parallel.MPI.Serializable
    other-modules:
       C2HS,
@@ -78,7 +78,7 @@ executable  bindings-mpi-testsuite
     Control.Parallel.MPI.Request,
     Control.Parallel.MPI.Tag,
     Control.Parallel.MPI.Rank,
-    Control.Parallel.MPI.Array,
+    Control.Parallel.MPI.Storable,
     Control.Parallel.MPI.Serializable
     C2HS,
     Control.Parallel.MPI.MarshalUtils,
