--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -31,7 +31,7 @@ Library
    hs-source-dirs:
       src
    build-depends:
-      base,
+      base > 3 && <= 5,
       haskell98,
       bytestring,
       cereal,
