--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -49,7 +49,8 @@ Library
       Control.Parallel.MPI.Tag,
       Control.Parallel.MPI.Rank,
       Control.Parallel.MPI.Storable,
-      Control.Parallel.MPI.Serializable
+      Control.Parallel.MPI.Serializable,
+      Control.Parallel.MPI.Group
    other-modules:
       C2HS,
       Control.Parallel.MPI.MarshalUtils,
@@ -80,12 +81,14 @@ executable  bindings-mpi-testsuite
     Control.Parallel.MPI.Rank,
     Control.Parallel.MPI.Storable,
     Control.Parallel.MPI.Serializable
-    C2HS,
     Control.Parallel.MPI.MarshalUtils,
     Control.Parallel.MPI.Utils,
+    Control.Parallel.MPI.Group,
+    C2HS,
     IOArrayTests,
     SerializableTests,
     StorableArrayTests,
+    GroupTests,
     TestHelpers
   main-is:       Testsuite.hs
   if flag(test)
