Removed dependency on containes which was redundant after Set was changed to List in second arg of groupExcl and groupIncl

--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -36,8 +36,7 @@ Library
       bytestring,
       cereal,
       extensible-exceptions,
-      array,
-      containers
+      array
    exposed-modules:
       Control.Parallel.MPI.Internal,
       Control.Parallel.MPI.Datatype,
