Added test file for primitive data type things (send/recv etc) to try to catch word size errors.

--- a/bindings-mpi.cabal
+++ b/bindings-mpi.cabal
@@ -93,6 +93,7 @@ executable  bindings-mpi-testsuite
     SerializableTests,
     StorableArrayTests,
     GroupTests,
+    PrimTypeTests,
     TestHelpers
   main-is:       Testsuite.hs
   if flag(test)
