--- a/haskell-mpi.cabal
+++ b/haskell-mpi.cabal
@@ -1,4 +1,4 @@
-name:                bindings-mpi
+name:                haskell-mpi
 version:             0.0.1
 cabal-version:       >= 1.6
 synopsis:            Haskell bindings to the MPI library.
@@ -9,7 +9,7 @@ license-file:        LICENSE
 copyright:           (c) 2010 Bernard James Pope
 author:              Bernard James Pope (Bernie Pope)
 maintainer:          florbitous@gmail.com 
-homepage:            http://github.com/bjpop/bindings-mpi
+homepage:            http://github.com/bjpop/haskell-mpi
 build-type:          Simple
 stability:           experimental
 tested-with:         GHC==6.10.4, GHC==6.12.1
@@ -60,7 +60,7 @@ Library
       Control.Parallel.MPI.MarshalUtils,
       Control.Parallel.MPI.Utils
 
-executable  bindings-mpi-testsuite
+executable  haskell-mpi-testsuite
   hs-source-dirs:
     ./test
     ./src
@@ -107,7 +107,7 @@ executable  bindings-mpi-testsuite
   else
     buildable: False
 
-executable bindings-mpi-comprunclean
+executable haskell-mpi-comprunclean
   hs-source-dirs:
     ./test
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
