Small test to verify that Fast and Simple could be imported at the same time

--- a/haskell-mpi.cabal
+++ b/haskell-mpi.cabal
@@ -85,6 +85,7 @@ executable  haskell-mpi-testsuite
     C2HS,
     IOArrayTests,
     SimpleTests,
+    FastAndSimpleTests,
     StorableArrayTests,
     GroupTests,
     PrimTypeTests,
