--- a/haskell-mpi.cabal
+++ b/haskell-mpi.cabal
@@ -17,16 +17,16 @@ description:         Haskell bindings to the MPI library.
  the MPI implementation linked to this library (that is, the MPI
  implementation which is chosen when this Haskell library is compiled).
  .
- Module "Control.Parallel.MPI.Fast" contains a high-performance interface
+ "Control.Parallel.MPI.Fast" contains a high-performance interface
  for working with (possibly mutable) arrays of storable Haskell data types.
  .
- Module "Control.Parallel.MPI.Simple" contains a convenient (but slower)
+ "Control.Parallel.MPI.Simple" contains a convenient (but slower)
  interface for sending arbitrary serializable Haskell data values as messages.
  .
- Module "Control.Parallel.MPI.Internal" contains a direct binding to the
+ "Control.Parallel.MPI.Internal" contains a direct binding to the
  C interface.
  .
- Module "Control.Parallel.MPI.Base" contains essential MPI functionality
+ "Control.Parallel.MPI.Base" contains essential MPI functionality
  which is independent of the message passing API. This is re-exported
  by the Fast and Simple modules.
 
